# Ray_Tracer_in_C__

./: .cproject  .project  CMakeLists.txt  Camera.h  Color.h  Light.h  Object.h  Plane.h  Ray Tracer in C++.cpp  Ray.h  Source.h  Sphere.h  Triangle.h  Vect.h
